<resources>
    <string name="app_name">UsersManager</string>
    <string name="login">login</string>
    <string name="sign_up">Sign up</string>
    <string name="password">password</string>
    <string name="school">school</string>
    <string name="email">email</string>
    <string name="user_name">user name</string>
    <string name="log_in">login</string>
    <string name="sign_in">Sign In</string>
</resources>
