<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/regester_background_color"
    tools:context="com.example.mohammedelamin.usersmanager.Registration_And_Login_Module.UserRegistrationActivity">


    <android.support.v7.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"

        app:cardElevation="5dp"
        app:cardCornerRadius="4dp"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"

            android:orientation="vertical">

            <!--<ImageView-->
            <!--android:id="@+id/imageView3"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="113dp"-->
            <!--app:srcCompat="@drawable/male_user" />-->

            <EditText
                android:id="@+id/reg_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/user_name"
                android:textColor="@color/backgroun"
                android:textColorHint="@color/backgroun"
                android:background="@drawable/input_back"
                android:padding="11dp"
                android:inputType="textPersonName"
                android:layout_margin="7dp"
                />

            <EditText
                android:id="@+id/reg_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:textColor="@color/backgroun"
                android:hint="@string/email"
                android:textColorHint="@color/backgroun"
                android:background="@drawable/input_back"
                android:padding="11dp"
                android:ems="10"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/reg_school"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:textColor="@color/backgroun"
                android:hint="@string/school"
                android:textColorHint="@color/backgroun"
                android:background="@drawable/input_back"
                android:padding="11dp"
                android:ems="10"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/reg_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:ems="10"
                android:textColor="@color/backgroun"
                android:hint="@string/password"
                android:background="@drawable/input_back"
                android:padding="11dp"
                android:textColorHint="@color/backgroun"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/Regsteration_btn"
                android:layout_width="match_parent"
                android:layout_height="61dp"
                android:layout_margin="20sp"
                android:text="@string/sign_up"
                android:background="@drawable/btn_back"
                android:textColor="@color/txt_color" />

            <TextView
                android:id="@+id/Sign_in_text"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="@color/backgroun" />
        </LinearLayout>
    </android.support.v7.widget.CardView>


</RelativeLayout>
