<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/regester_background_color"
    tools:context="com.example.mohammedelamin.usersmanager.Registration_And_Login_Module.UserLoginActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        app:cardElevation="5dp"
        app:cardCornerRadius="4dp"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"

            android:orientation="vertical">


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="222dp"
                android:layout_height="102dp"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ellon" />

            <EditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:textColor="@color/colorPrimary"
                android:hint="@string/email"
                android:textColorHint="@color/colorPrimary"
                android:background="@drawable/input_back"
                android:padding="11dp"
                android:ems="10"
                android:inputType="textEmailAddress" />



            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:ems="10"
                android:textColor="@color/colorPrimary"
                android:hint="@string/password"
                android:background="@drawable/input_back"
                android:padding="11dp"
                android:textColorHint="@color/colorPrimary"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="61dp"
                android:layout_margin="20sp"
                android:text="@string/sign_in"
                android:background="@drawable/btn_back"
                android:textColor="@color/txt_color" />
            <TextView
                android:id="@+id/Sign_up_text"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/sign_up"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>


    </android.support.v7.widget.CardView>





</RelativeLayout>
